2020-05-23  6.9.11-14 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-14, GIT revision 15...

2020-05-23  6.9.11-14 Cristy  <quetzlzacatenango@image...>
  * Errant warning when reading a profile file (reference
    https://github.com/ImageMagick/ImageMagick/issues/2030).

2020-05-17  6.9.11-13 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-13, GIT revision 15610:9445760:20200517.

2020-05-17  6.9.11-13 Cristy  <quetzlzacatenango@image...>
  * Remove errant debugging statement in SVG coder.

2020-05-15  6.9.11-12 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-12, GIT revision 15602:96db62d:20200515.

2020-05-12  6.9.11-12 Cristy  <quetzlzacatenango@image...>
  * Black artefacts during quantization (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2007#discussioncomment-13546).

2020-04-08  6.9.11-11 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-11, GIT revision 15592:6c1c1a9:20200508

2020-04-28  6.9.11-11 Cristy  <quetzlzacatenango@image...>
  * Disable "random" OpenCL kernel.  Previously the work load was distributed
    but each started with the same random seed.
  * Enable threaded PNG coder.

2020-04-27  6.9.11-10 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-10, GIT revision 15574:867252a:20200427

2020-04-27  6.9.11-10 Cristy  <quetzlzacatenango@image...>
  * Correction to allocate a colormap of the maximum colors when color
    reducing an image sequence.
  * Write to stdout for mp4:-.

2020-04-26  6.9.11-9 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-9, GIT revision 15563:7e4286f:20200426.

2020-04-25  6.9.11-9 Cristy  <quetzlzacatenango@image...>
  * Allocate a colormap of the maximum colors when color reducing an image
    sequence.
  * Label was not centered properly (reference
    https://github.com/ImageMagick/ImageMagick/issues/1879).
